Add reusable BackButton and MenuButton components
Introduces reusable BackButton and MenuButton components for consistent UI across the app. Refactors AppHeader, RecordsEditor, and Sheets to use these new components, improving code maintainability and visual consistency. Updates related CSS for better styling and transparency effects, and removes redundant button implementations. Also adjusts some background and color styles for improved appearance in both light and dark themes.

--- a/src/App Header/AppHeader.module.css
+++ b/src/App Header/AppHeader.module.css
@@ -636,7 +636,7 @@
   margin-right: 8px;
   margin-left: auto;
   padding: 4px;
-  background: white;
+  background: rgb(255, 255, 255, 0.8);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
   border-radius: 50px;
@@ -644,7 +644,7 @@
 }
 
 .sheetActions.darkTheme {
-  background: rgb(26, 26, 26);
+  background: rgb(26, 26, 26, 0.8);
   box-shadow:
     0 4px 16px rgba(0, 0, 0, 0.25),
     0 1px 8px rgba(0, 0, 0, 0.15),
